web/apollo/assets/styles/sass/40-base/_globals.scss
/*------------------------------------*\
    #Globals
\*------------------------------------*/

/*
 * Global selectors
 */
*,
*::before,
*::after {
	background-color: inherit;
	box-sizing: border-box;
	font-family: inherit;
	color: inherit;
	margin: 0;
	overflow-wrap: break-word;
	padding: 0;
}




/*
 * HTML and Body
 */
:root {
	min-height: 100%;
}


body {
	background: $white;
	color: contrast($white);
}

main {
	padding-bottom: $size-plus1;
	padding-top: $size-plus1;
}

